tests/ui/tool-attributes/unknown-tool-name.stderr
error[E0433]: cannot find module or crate `foo` in this scope
  --> $DIR/unknown-tool-name.rs:1:3
   |
LL | #[foo::bar]
   |   ^^^ use of unresolved module or unlinked crate `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
