tests/ui/tool-attributes/unknown-tool-name.rs
#[foo::bar] //~ ERROR: cannot find module or crate `foo`
//~^ NOTE: use of unresolved module or unlinked crate `foo`
fn main() {}
